--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
+    "browser-sync": "^2.18.13",
     "express": "^4.15.2",
     "fs-promise": "^2.0.2",
     "imagemin": "^5.2.2",
