--- a/package.json
+++ b/package.json
@@ -65,6 +65,6 @@
     "serve": "node server.js",
     "watch:css": "onchange 'app/styles/*.scss' -- npm run build:css",
     "watch:js": "onchange 'app/scripts/*.js' -- npm run build:js",
-    "postinstall": "build:all"
+    "postinstall": "npm run build:all"
   }
 }
