--- a/package.json
+++ b/package.json
@@ -19,7 +19,23 @@
     "jquery": "^3.2.1",
     "ng-toast": "^2.0.0",
     "ngmodal": "^2.0.1",
-    "pouchdb": "^6.1.2"
+    "pouchdb": "^6.1.2",
+    "autoprefixer": "^6.7.7",
+    "browser-sync": "^2.18.13",
+    "express": "^4.15.2",
+    "fs-promise": "^2.0.2",
+    "imagemin": "^5.2.2",
+    "jasmine-core": "^2.2.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^1.0.0",
+    "karma": "^0.12.31",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "load-grunt-tasks": "^3.1.0",
+    "node-sass": "^4.5.2",
+    "onchange": "^3.2.1",
+    "postcss-cli": "^3.1.1",
+    "uglify-js": "^2.8.21"
   },
   "repository": {
     "type": "git",
