--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "uglify-js": "^2.8.21"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "7.5.0",
+    "npm": "4.1.2"
   },
   "scripts": {
     "clean": "rm -r dist || true",
