--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "build:js": "npm run lint && npm run concat && npm run uglify",
     "build:all": "npm run clean && npm run build:css && npm run build:js && npm run imagemin && npm run copy:all",
     "serve": "node server.js",
-    "watch:css": "onchange 'app/styles/*.scss' -- npm run build:css",
-    "watch:js": "onchange 'app/scripts/*.js' -- npm run build:js",
+    "watch:css": "onchange 'app/styles/**/*.scss' -- npm run build:css",
+    "watch:js": "onchange 'app/scripts/**/*.js' -- npm run build:js",
     "postinstall": "npm run build:all"
   }
 }
