Adds a html watch task

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "serve": "node server.js",
     "watch:css": "onchange 'app/styles/**/*.scss' -- npm run build:css",
     "watch:js": "onchange 'app/scripts/**/*.js' -- npm run build:js",
+    "watch:html": "onchange 'app/views/**/*.html' -- npm run copy:index && npm run copy:views",
     "postinstall": "npm run build:all"
   }
 }
