Updating to Angular 6 Instaling and using MDBootstrap

--- a/package.json
+++ b/package.json
@@ -1,74 +1,56 @@
 {
-  "name": "easterdash",
+  "name": "dashboard",
   "version": "0.0.0",
-  "dependencies": {
-    "angular": "^1.6.4",
-    "angular-animate": "^1.6.4",
-    "angular-chart.js": "^1.1.1",
-    "angular-cookies": "^1.6.4",
-    "angular-messages": "^1.6.4",
-    "angular-pouchdb": "^5.0.0",
-    "angular-resource": "^1.6.4",
-    "angular-route": "^1.6.4",
-    "angular-sanitize": "^1.6.4",
-    "angular-touch": "^1.6.4",
-    "bootstrap-sass": "^3.3.7",
-    "chart.js": "^2.5.0",
-    "express": "^4.16.2",
-    "highcharts-ng": "^1.1.0",
-    "jquery": "^3.2.1",
-    "ng-toast": "^2.0.0",
-    "ngmodal": "^2.0.1",
-    "pouchdb": "^6.1.2"
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SoftwareCornwall/team-dashboard"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@types/chart.js": "^2.7.40",
+    "angular-2-local-storage": "^2.0.0",
+    "angular-bootstrap-md": "^7.0.0",
+    "angular2-highcharts": "^0.5.5",
+    "chart.js": "^2.7.2",
+    "core-js": "^2.5.4",
+    "font-awesome": "~4.7.x",
+    "hammerjs": "~2.0.8",
+    "rxjs": "^6.0.0",
+    "underscore": "^1.9.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "browser-sync": "^2.18.13",
-    "express": "^4.15.2",
-    "fs-promise": "^2.0.2",
-    "imagemin": "^5.2.2",
-    "jasmine-core": "^2.2.0",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.31",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^3.1.0",
-    "node-sass": "^4.5.2",
-    "onchange": "^3.2.1",
-    "postcss-cli": "^3.1.1",
-    "uglify-js": "^2.8.21"
-  },
-  "engines": {
-    "node": "7.5.0",
-    "npm": "4.1.2"
-  },
-  "scripts": {
-    "clean": "rm -r dist || true",
-    "scss": "node-sass --output-style compressed -o dist/styles app/styles",
-    "css": "mkdir -p dist/styles && cat node_modules/ngmodal/dist/ng-modal.css node_modules/ng-toast/dist/ngToast.css > dist/styles/vendor.css",
-    "fonts": "mkdir -p dist/fonts && cp node_modules/bootstrap-sass/assets/fonts/bootstrap/* dist/fonts",
-    "autoprefixer": "postcss -u autoprefixer --autoprefixer.browsers '&gt; 5%, ie 9'  -r dist/styles/*",
-    "lint": "jshint app/scripts",
-    "concat": "cat node_modules/jquery/dist/jquery.js node_modules/angular/angular.js node_modules/bootstrap-sass/assets/javascripts/bootstrap.js node_modules/angular-animate/angular-animate.js node_modules/angular-cookies/angular-cookies.js node_modules/angular-messages/angular-messages.js node_modules/angular-resource/angular-resource.js node_modules/angular-route/angular-route.js node_modules/angular-sanitize/angular-sanitize.js node_modules/angular-touch/angular-touch.js node_modules/pouchdb/dist/pouchdb.js node_modules/angular-pouchdb/dist/angular-pouchdb.js node_modules/chart.js/dist/Chart.js node_modules/angular-chart.js/dist/angular-chart.js node_modules/ngModal/dist/ng-modal.js node_modules/ng-toast/dist/ngToast.js node_modules/highcharts-ng/dist/highcharts-ng.js > dist/vendor.js",
-    "uglify": "uglifyjs app/scripts/*.js app/scripts/**/*.js -o dist/app.js && uglifyjs app/scripts/*.js -m -c -o dist/app.min.js && uglifyjs dist/vendor.js -m -c -o dist/vendor.min.js",
-    "imagemin": "mkdir -p dist && cp -r app/images dist/images",
-    "copy:views": "mkdir -p dist && cp -r app/views dist/views",
-    "copy:index": "mkdir -p dist && cp app/* dist/ || true",
-    "copy:all": "npm run copy:index; npm run copy:views",
-    "build:css": "npm run scss && npm run css && npm run fonts && npm run autoprefixer",
-    "build:js": "npm run lint && npm run concat && npm run uglify",
-    "build:all": "npm run clean && npm run build:css && npm run build:js && npm run imagemin && npm run copy:all",
-    "serve": "node server.js",
-    "watch:css": "onchange 'app/styles/**/*.scss' -- npm run build:css",
-    "watch:js": "onchange 'app/scripts/**/*.js' -- npm run build:js",
-    "watch:html": "onchange 'app/views/*.html' -- npm run copy:views",
-    "watch:index": "onchange 'app/index.html' -- npm run copy:index",
-    "watch:all": "npm run watch:css & npm run watch:js & npm run watch:html & npm run watch:index",
-    "postinstall": "npm run build:all"
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.0",
+    "@angular/language-service": "^6.0.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1"
   }
 }
