--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/platform-browser": "^6.0.0",
@@ -26,6 +27,7 @@
     "angular2-highcharts": "^0.5.5",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "firebase": "^6.3.0",
     "font-awesome": "~4.7.x",
     "hammerjs": "~2.0.8",
     "rxjs": "^6.0.0",
